--- a/Views/Customers/Details.cshtml
+++ b/Views/Customers/Details.cshtml
@@ -1,5 +1,4 @@
-﻿@page
-@model RestaurantSystem.Views.Customers.DetailsModel
+﻿@model RestaurantSystem.Models.Customer
 
 @{
     ViewData["Title"] = "Details";
@@ -11,39 +10,39 @@
     <h4>Customer</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Customer.PhoneNumber)
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.PhoneNumber)
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Customer.PhoneNumber)
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.PhoneNumber)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Customer.Name)
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Customer.Name)
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Name)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Customer.LastName)
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.LastName)
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Customer.LastName)
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.LastName)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Customer.Address)
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Address)
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Customer.Address)
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Address)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Customer.ZipCode)
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ZipCode)
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Customer.ZipCode)
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ZipCode)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Customer.ID">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
