--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,17 +4,20 @@
 
 <div class="text-center">
     <h1 class="display-4">Pizzeria System</h1>
-    
-     
+
+
 
 
     <div class="alert alert-primary" role="alert">
         <a href="/Orders" class="alert-link"><h1>ORDERS</h1></a> To Enter Orders
     </div>
     <div class="alert alert-secondary" role="alert">
-         <a href="/Employees" class="alert-link"><h1>EMPLOYEES</h1> </a> To Manage Your Employees
+        <a href="/Employees" class="alert-link"><h1>EMPLOYEES</h1> </a> To Manage Your Employees
+    </div>
+    <div class="alert alert-warning" role="alert">
+        <a href="/Products" class="alert-link"><h1>PRODUCTS</h1></a> To Manage Products
     </div>
     <div class="alert alert-success" role="alert">
-         <a href="/Reports" class="alert-link"><h1>REPORTS</h1></a> To Generate Reports
+        <a href="/Reports" class="alert-link"><h1>REPORTS</h1></a> To Generate Reports
     </div>
 </div>
