Create el lookup for Customer PhoneNumber in Order Controller - Working

--- a/Views/Orders/Index.cshtml
+++ b/Views/Orders/Index.cshtml
@@ -13,6 +13,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.Customer.PhoneNumber)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Customer)
             </th>
             <th>
