Create controller that passes the customer and products to the order

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 
 
     <div class="alert alert-primary" role="alert">
-        <a href="/Orders/" class="alert-link"><h1>ORDERS</h1></a> To Enter Orders
+        <a href="/Orders/FindCustomer" class="alert-link"><h1>ORDERS</h1></a> To Enter Orders
     </div>
     <div class="alert alert-secondary" role="alert">
         <a href="/Employees" class="alert-link"><h1>EMPLOYEES</h1> </a> To Manage Your Employees
