--- a/Views/Orders/FindCustomer.cshtml
+++ b/Views/Orders/FindCustomer.cshtml
@@ -11,7 +11,7 @@
     <div class="col-lg-7">
        
 
-        <form asp-controller="Orders" asp-action="Add" method="post">
+        <form asp-controller="Orders" asp-action="FindCustomer" method="post">
             <label for="PhoneNumber">Enter a phone number:</label><br><br>
             <input type="tel" id="PhoneNumber" name="PhoneNumber" placeholder="9545551234" /><br><br>
             <small>Format: 954-555-1234</small><br><br>
