System running - No completed

--- a/Views/Orders/FindCustomer.cshtml
+++ b/Views/Orders/FindCustomer.cshtml
@@ -14,7 +14,7 @@
         <form asp-controller="Orders" asp-action="FindCustomer" method="post">
             <label for="PhoneNumber">Enter a phone number:</label><br><br>
             <input type="tel" id="PhoneNumber" name="PhoneNumber" placeholder="9545551234" /><br><br>
-            <small>Format: 954-555-1234</small><br><br>
+            <small>Format: 9545551234</small><br><br>
             <input type="submit" value="Search Phone Number">
         </form>
     </div>
